k8s-config/deployment-usuarios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msvc-usuarios
spec:
  replicas: 3
  selector:
    matchLabels:
      app: msvc-usuarios
  template:
    metadata:
      labels:
        app: msvc-usuarios
    spec:
      containers:
      - image: us-central1-docker.pkg.dev/project-gke-453903/usuarios/usuarios:latest
        name: usuarios
        ports:
        - containerPort: 8001
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 20
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          request:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "350m"
