k8s-config/svc-usuarios.yaml
apiVersion: v1
kind: Service
metadata:
  name: msvc-usuarios-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  selector:
    app: msvc-usuarios
  type: ClusterIP
